--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    
     <form>
       <div class="form-group">
         <label>First Name</label>
@@ -8,8 +9,8 @@
         <label>Last Name</label>
         <input type="text" class="form-control" #lastName>
       </div>
-      <button type="button" class="btn btn-primary">Submit</button>
+      <button type="button" class="btn btn-primary" (click)="onClick(firstName,lastName)">Submit</button>
     </form>
-    
-  </div>
+    <app-card *ngFor="let card of sorted" [card]="card"></app-card>
+</div>
   
